--- a/src/style.css
+++ b/src/style.css
@@ -81,3 +81,23 @@ header {
 .btnDelete {
 	margin-left: 1em;
 }
+
+h2 {
+	float: left;
+}
+
+.loader {
+	border: 8px solid #f3f3f3; /* Light grey */
+	border-top: 8px solid green; /* Blue */
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	animation: spin 2s linear infinite;
+	float: left;
+	margin-left: 2em;
+  }
+
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
