--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,6 @@ header {
 
 #divAddPlayers {
 	width: 80%;
-	margin-top: 2em;
 	float: left;
 	padding: 2em;
 }
@@ -83,16 +82,20 @@ header {
 }
 
 h2 {
-	float: left;
+    float: left;
+}
+
+.width100 {
+    width: 100%;
 }
 
 .loader {
-	border: 8px solid #f3f3f3; /* Light grey */
-	border-top: 8px solid green; /* Blue */
+	border: 8px solid #f3f3f3; 
+	border-top: 8px solid green; 
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
-	animation: spin 2s linear infinite;
+	animation: spin 1s linear infinite;
 	float: left;
 	margin-left: 2em;
 }
