--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,17 @@ h2 {
 	100% { transform: rotate(360deg); }
 }
 
+#nextTraining, #nextMatch {
+  box-shadow: 2px 4px 25px rgba(0, 0, 0, .1);
+  border-radius: 12px;
+  overflow: hidden;
+  transition: all .2s linear;
+}
+
+h3 {
+    margin-bottom: 1em;
+}
+
 /*reset properties of an element, used to show modal dialog*/
 .reset-this {
     animation : none;
